# lzf-rust

./: .gitignore  Cargo.toml  README.md
crates/lzf-rust/: Cargo.toml  README.md  rustfmt.toml
crates/lzf-rust-cli/: Cargo.toml  README.md
crates/lzf-rust-cli/src/: main.rs
crates/lzf-rust/LICENSES/: BSD-2-Clause-liblzf.txt  ISC.txt
crates/lzf-rust/benches/: comparison.rs
crates/lzf-rust/examples/: basic.rs  stream.rs
crates/lzf-rust/src/: error.rs  framed.rs  io.rs  lib.rs  stream.rs
crates/lzf-rust/src/raw/: decoder.rs  encoder.rs  mod.rs
crates/lzf-rust/tests/: regression.rs  roundtrip.rs  stream.rs
crates/lzf-rust/tests/data/regression/framed/: compressed_block.in  invalid_magic.err  invalid_magic.in  truncated_compressed_payload.err  truncated_compressed_payload.in  uncompressed_block.in  unknown_block_type.err  unknown_block_type.in
crates/lzf-rust/tests/data/regression/raw/: literal_run.in  minimal_backref.in
